# ibotta-python-dabs-tag-replacement

./: .gitignore  README.md  databricks.yml  mutators.py  pyproject.toml  setup.py
resources/: __init__.py  dabs_python_example_job.py
src/: notebook.ipynb
variables/: variables.yml
