[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dabs_python_example"
requires-python = ">=3.10"
description = "wheel file based on dabs_python_example"

# Dependencies in case the output wheel file is used as a library dependency.
# For defining dependencies, when this package is used in Databricks, see:
# https://docs.databricks.com/dev-tools/bundles/library-dependencies.html
#
# Example:
# dependencies = [
#     "requests==x.y.z",
# ]
dependencies = [
]

# see setup.py
dynamic = ["version"]

[tool.setuptools]
py-modules = []

[tool.uv]
## Dependencies for local development
dev-dependencies = [
    "databricks-bundles==0.7.2",
    "pyyaml",

    ## Add code completion support for DLT
    # "databricks-dlt",

    ## databricks-connect can be used to run parts of this project locally.
    ## See https://docs.databricks.com/dev-tools/databricks-connect.html.
    ##
    ## Uncomment line below to install a version of db-connect that corresponds to
    ## the Databricks Runtime version used for this project.
    # "databricks-connect>=15.4,<15.5",
]

override-dependencies = [
    # pyspark package conflicts with 'databricks-connect'
    "pyspark; sys_platform == 'never'",
]
